--- a/desafios/cordel/index.html
+++ b/desafios/cordel/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cordel Moderno</title>
     <link rel="stylesheet" href="estilos.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
         <header>
@@ -47,13 +48,15 @@
         Agora é .com<br>
         Se o saite é muito bom<br>
         Ele vale um alto preço.<br>
-        Pra piorar a liguagem<br>
+    </p>
+    <p>Pra piorar a liguagem<br>
         O emoticom é um risco<br>
         Tem símbolo para <br>
         Ponto e vírgula e um asterisco<br>
         Um beijo significa<br>
         Pra entender como fica<br>
-        Decifre esse rabisco.<br>
+        Decifre esse rabisco.<br></p>
+
     </p>
  </section>
 
@@ -86,7 +89,7 @@
         Deus escuta todo mundo<br>
         Se quiser, faça esse teste<br>
         Dois pontos são dois joelhos<br>
-        Seus lábios são <br>
+        Seus lábios são aparelhos <br>
         Deixe que Deus interprete.<br>
     </p>
  </section>
