--- a/desafios/cordel/index.html
+++ b/desafios/cordel/index.html
@@ -25,7 +25,7 @@
             Vou dizer tudo em poesia<br>
 
         </p>
-    </section>.
+    </section>
 
     <section class="imagem" id="img01">
     <p>
