--- a/Exercicios/ex023/tabela2.html
+++ b/Exercicios/ex023/tabela2.html
@@ -65,6 +65,15 @@
             font-weight: 500;
             border-top: dashed rgba(0, 0, 0, 0.747);
         }
+        hr{ 
+            width: 60%;
+            text-align: center;
+            background-color: black;
+            height: .5%;
+            margin-bottom: 3% ;
+            margin-top: -1%;
+            border-top: 1.3px solid rgba(105, 103, 103, 0.623);
+        }
     </style>
 </head>
 <body>
@@ -73,6 +82,7 @@
         <caption>
             Dencidade demográfica dividida em estados
         </caption>
+        <hr noshade="noshade">
         <thead>
             <tr>
             <th scope="col">
